# tiralab

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: new_song.mid
data/created/: Test1Degree2.mid  Test1Degree4.mid  Test1Degree6.mid  Test1Degree8.mid  Test2Degree2.mid  Test2Degree4.mid  Test2Degree6.mid  Test2Degree8.mid  Test3Degree2.mid  Test3Degree4.mid  Test3Degree6.mid  Test3Degree8.mid  Test6Degree.mid  meep.mid  meo.mid  meps.mid  mero.mid  mops.mid  moro.mid  tops.mid
data/testfile/: testFile.mid
data/training/: -home-reimkuos-School-temp-markovin-ketju-saveltaja-main-src-savellykset-savelma20210611231354..txt  new_song.mid
documentation/: implementation.md  quide.md  specifications.md  testing.md
documentation/reports/: week 1 report.md  week 2 report.md  week 3 report.md  week 4 report.md  week 5 report.md  week 6 report.md
src/: chain_creator.py  index.py  midireader.py  music_file_creator.py  time_trainer.py  trainer.py  transposer.py  trie_updater.py
src/datastructs/: queue.py  trie.py
src/tests/: queue_test.py  reader_test.py  test_transposer.py  trie_test.py  trie_updater_test.py
src/ui/: commandlineui.py
