[tool.poetry]
name = "tiralab"
version = "0.1.0"
description = ""
authors = ["Reima Kuomanen <reimkuos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pylint = "^2.8.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
